implementing the value Object design pattern in the Person class and using the ModelMapper library to transition the Objects