@@ -28,6 +28,7 @@
 	</scm>
 	<properties>
 		<java.version>21</java.version>
+		<model-mapper.version>3.2.0</model-mapper.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -59,7 +60,18 @@
 		<optional>true</optional>
 		</dependency>
 
+		<!-- o dozer foi descntinuado vamos utilizar o modelmapper https://mvnrepository.com/artifact/com.github.dozermapper.dozer/dozer-core
+		<dependency>
+			<groupId>com.github.dozermapper.dozer</groupId>
+			<artifactId>dozer-core</artifactId>
+			<version>7.0.0</version>
+		</dependency>-->
 
+		  <dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>${model-mapper.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -74,7 +86,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
-		</plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>21</source>
+                    <target>21</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
 	</build>
 
 </project>
